log
Mon 06 May 2024 11:15:17 PM UTC: 
 tests:  1|8
total_score: 0/70
cc7f8d3
Wed 08 May 2024 05:53:20 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:17: error: statement with no effect [-Werror=unused-value]
   41 |     nuevo->root == NULL;
      |                 ^
treemap.c:42:20: error: statement with no effect [-Werror=unused-value]
   42 |     nuevo->current == NULL;
      |                    ^
treemap.c:41:10: error: ‘*nuevo.root’ is used uninitialized [-Werror=uninitialized]
   41 |     nuevo->root == NULL;
      |     ~~~~~^~~~~~
treemap.c:42:10: error: ‘*nuevo.current’ is used uninitialized [-Werror=uninitialized]
   42 |     nuevo->current == NULL;
      |     ~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd2a15d
Wed 08 May 2024 05:54:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:10: error: ‘TreeNode’ has no member named ‘root’
   41 |     nuevo->root == NULL;
      |          ^~
treemap.c:42:10: error: ‘TreeNode’ has no member named ‘current’
   42 |     nuevo->current == NULL;
      |          ^~
treemap.c:43:10: error: ‘TreeNode’ has no member named ‘lower_than’
   43 |     nuevo->lower_than = lower_than;
      |          ^~
Compilation failed
0245b4c
Wed 08 May 2024 05:56:01 PM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  1|8
total_score: 0/70
e521476
Wed 08 May 2024 05:56:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b74a138
Wed 08 May 2024 06:01:58 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
32a54bb
Wed 08 May 2024 06:11:24 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
47f9fad
